Allow breaking words in DNS record content if needed to avoid overflowing table

--- a/themes/default/desktop.css
+++ b/themes/default/desktop.css
@@ -528,3 +528,7 @@ p.login_option.active {
 .gray {
     color: #777;
 }
+
+.wrapany {
+    overflow-wrap: anywhere;
+}
